Implements temporarily locking stations after CLI errors.
